Started logging changes  - Warning would-be cloners this is a cloned version in case original resuscitates  - Fix the config.json pointing to sqlite3 when readme is for mariadb.    Otherwise make fails with puzzling message.

--- a/config.json
+++ b/config.json
@@ -1,15 +1,15 @@
 {
   "address": "http://localhost:9999",
-  "dbhost": "",
-  "dbname": "pastebin.db",
+  "dbhost": "localhost",
+  "dbname": "paste",
   "dbtable": "pastebin",
   "dbaccountstable": "accounts",
-  "dbtype": "sqlite3",
-  "dbport": "",
-  "dbuser":"",
-  "dbpassword":"",
-  "displayname": "MyCompany",
-  "listenaddress": "localhost",
+  "dbtype": "mysql",
+  "dbport": "3306",
+  "dbuser":"paste",
+  "dbpassword":"tooth",
+  "displayname": "Pastebin",
+  "listenaddress": "",
   "listenport": "9999",
   "shorturllength": "5",
   "highlighter":"./highlighter-wrapper.py",
